<?xml version="1.0"?>
<package format="2">
  <name>torso_interface</name>
  <version>1.0.0</version>
  <description>ROS node to creates a simpler interface through topics to the torso controller.</description>

  <maintainer email="jgomez@robotnik.es">Jose Gómez</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>robotnik_msgs</build_depend>
  <build_depend>rcomponent</build_depend>

  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>robotnik_msgs</exec_depend>
  <exec_depend>rcomponent</exec_depend>
  <export>
  </export>
</package>
